--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "scripts": {
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development --watch",
-    "dev": "webpack-dev-server"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "babel-loader": "^8.1.0",
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "2.22.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge-and-include-globally": "^2.1.26"
-  },
-  "name": "editorjsMdParser",
-  "description": "Import from markdown and export editorjs data to markdown",
+  "name": "editorjs-markdown-converter",
+  "description": "A data model convert between Markdown string and data of EditorJS",
   "version": "1.0.0",
-  "main": "./dist/bundle.js",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite"
+  },
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@editorjs/editorjs": "^2.27.0",
+    "@types/node": "^20.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.7"
+  },
   "dependencies": {
-    "css-loader": "^5.0.0",
     "rehype-parse": "^8.0.4",
     "rehype-remark": "^9.1.2",
-    "remark": "^14.0.2",
-    "remark-stringify": "^10.0.2",
-    "require": "^2.4.20",
-    "style-loader": "^2.0.0",
+    "remark": "^14.0.3",
+    "remark-stringify": "^10.0.3",
     "unified": "^10.1.2"
   }
 }
