build: update package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "editorjs-markdown-converter",
+  "name": "@vingeraycn/editorjs-markdown-converter",
   "description": "A data model convert between Markdown string and data of EditorJS",
   "version": "1.0.0",
   "scripts": {
