--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@editorjs/editorjs": "^2.27.0",
+    "@rollup/plugin-typescript": "^11.1.1",
     "@types/node": "^20.1.7",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
